fixed 2 broken lists in autoinst-profiles.adoc

--- a/modules/client-configuration/pages/autoinst-profiles.adoc
+++ b/modules/client-configuration/pages/autoinst-profiles.adoc
@@ -38,32 +38,53 @@ Alternatively, for {kickstart} only, you can use the {webui} wizard.
 
 
 .Procedure: Creating an Autoinstallation Profile by Upload
+
 . In the {productname} {webui}, navigate to menu:Systems[Autoinstallation > Profiles].
+
 . Click btn:[Upload Kickstart/Autoyast File].
+
 . In the [guimenu]``Label`` field, type a name for the profile.
-  Do not use spaces.
+Do not use spaces.
+
 . In the [guimenu]``Autoinstall Tree`` field, select the autoinstallable distribution to use for this profile.
+
 . In the [guimenu]``Virtualization Type`` field, select the type of virtualization to use for this profile, or select ``None`` if you do not want to use this profile to create a new virtual machine.
+
 . Copy the contents of your autoinstallation file into the [guimenu]``File Contents`` field, or upload the file directly using the [guimenu]``File to Upload`` field.
-  For more information about the details to include here, see xref:client-configuration:autoinst-profiles.adoc#autoyast[AutoYast Profiles] or xref:client-configuration:autoinst-profiles.adoc#kickstart[Kickstart Profiles].
++
+
+For more information about the details to include here, see xref:client-configuration:autoinst-profiles.adoc#autoyast[AutoYast Profiles] or xref:client-configuration:autoinst-profiles.adoc#kickstart[Kickstart Profiles].
++
+
 . Click btn:[Create] to create the profile.
 
 
 
 .Procedure: Creating a {kickstart} Profile by Wizard
+
 . In the {productname} {webui}, navigate to menu:Systems[Autoinstallation > Profiles].
+
 . Click btn:[Create Kickstart Profile].
+
 . In the [guimenu]``Label`` field, type a name for the profile.
-  Do not use spaces.
+Do not use spaces.
+
 . In the [guimenu]``Base Channel`` field, select the base channel to use for this profile.
-    This field is populated from the distributions available.
-    If the base channel you need is not available, check that you have created the distribution correctly.
+This field is populated from the distributions available.
+If the base channel you need is not available, check that you have created the distribution correctly.
+
 . In the [guimenu]``Virtualization Type`` field, select the type of virtualization to use for this profile, or select ``None`` for no virtualization.
+
 . Click btn:[Next].
+
 . In the [guimenu]``Distribution File Location`` type the path to the installation media installed on the {productname} Server.
+
 . Click btn:[Next].
+
 . Provide a password for the root user on the client.
+
 . Click btn:[Finish].
+
 . Review the details of your new profile, and customize as required.
 
 When you are creating your autoinstallation profile, you can check [guimenu]``Always use the newest Tree for this base channel``.
@@ -95,9 +116,13 @@ Check the [path]``README`` file included with the script to determine which vari
 For more information about using variables in {ay} scripts, see xref:client-configuration:autoinst-profiles#variables[Variables].
 
 Here are the most important sections in the {ay} installation file for installing with SUSE Manager:
+
 * ``<add-on>`` section allows to add child channels to the installation
+
 * ``<general>$SNIPPET('spacewalk/sles_no_signature_checks')</general>` disables signature checks
+
 * ``<software>`` allows to specify the correct product for the Unified Installer
+
 * ``<init-scripts config:type="list">$SNIPPET('spacewalk/minion_script')</init-scripts>`` allows the client to register to {productname} as a Salt minion.
 
 For more information about {ay}, see https://doc.opensuse.org/projects/autoyast/.
@@ -118,11 +143,17 @@ If you have many custom configuration files located on a client you want to rein
 
 
 .Procedure: Creating a File Preservation List
+
 . In the {productname} {webui}, navigate to menu:Systems[Autoinstallation > File Preservation] and click btn:[Create File Preservation List].
+
 . Enter a suitable label, and list absolute paths to all files and directories you want to save.
+
 . Click btn:[Create List].
+
 . Include the file preservation list in your {kickstart} profile.
-  Navigate to menu:Systems[Autoinstallation > Profiles] and select the profile you want to edit, go to the menu:System Details[File Preservation] subtab, and select the file preservation list to include.
+
+
+. Navigate to menu:Systems[Autoinstallation > Profiles] and select the profile you want to edit, go to the menu:System Details[File Preservation] subtab, and select the file preservation list to include.
 
 [NOTE]
 ====
