fixed broken lists and missing product migration section in localized docs

--- a/modules/client-configuration/pages/client-upgrades-major.adoc
+++ b/modules/client-configuration/pages/client-upgrades-major.adoc
@@ -21,21 +21,31 @@ Before you can migrate your client from SLE{nbsp}12 to SLE{nbsp}15{nbsp}, you ne
 .Procedure: Preparing Installation Media
 . On the {productname} Server, create a local directory for the SLE{nbsp}15{nbsp}SP2 installation media:
 +
+
 ----
 mkdir -p /srv/images/sle15sp2
 ----
++
+
 . Download an ISO image with the installation sources, and mount the ISO image on your server:
 +
+
 ----
 mount -o loop DVD1.iso /mnt/
 ----
++
+
 . Copy everything from the mounted ISO to your local file system:
 +
+
 ----
 cp -r /mnt/* /srv/images/sle15sp2
 ----
++
+
 . When the copy is complete, unmount the ISO image:
 +
+
 ----
 umount /mnt
 ----
@@ -46,20 +56,27 @@ This image is the unified installer and can be used for multiple autoinstallable
 ====
 
 
-
 .Procedure: Creating an Autoinstallable Distribution
 . In the {productname} {webui}, navigate to menu:Systems[Autoinstallation > Distributions] and click btn:[Create Distribution].
+
 . In the [guimenu]``Create Autoinstallable Distribution`` section, use these parameters:
+
 * In the [guimenu]``Distribution Label`` section, type a unique name for the distribution.
     Use only letters, numbers, hyphens, periods, and underscores, and ensure the name is longer than four characters.
     For example, ``sles15sp2-x86_64``.
+
 * In the [guimenu]``Tree Path`` field, type an absolute path to the installation source.
     For example, [path]``/srv/images/sle15sp2``.
+
 * In the [guimenu]``Base Channel`` field, select [systemitem]``SLE-Product-SLES15-SP2-Pool for x86_64``.
+
 * In the [guimenu]``Installer Generation`` field, select [systemitem]``SUSE Linux Enterprise 15``.
+
 * In the [guimenu]``Kernel Options`` field, type any options to be passed to the kernel when booting for the installation.
     The [option]``install=`` parameter and the [option]``self_update=0 pt.options=self_update`` parameter are added by default.
+
 * In the [guimenu]``Post Kernel Options`` section, type any options to  be passed to the kernel when booting the installed system for the first time.
+
 . Click btn:[Create Autoinstallable Distribution] to save.
 
 
@@ -69,14 +86,22 @@ To switch from the old SLE{nbsp}12{nbsp} base channel to the new SLE{nbsp}15 cha
 
 .Procedure: Creating an Activation Key
 . In the {productname} Server {webui}, navigate to menu:Systems[Activation Keys] and click [guimenu]``Create Key``.
+
 . Enter a description for your key.
+
 . Enter a key or leave it blank to generate an automatic key.
+
 . OPTIONAL: If you want to limit the usage, enter your value in the [guimenu]``Usage`` text field.
+
 . Select the [systemitem]``SLE-Product-SLES15-SP2-Pool for x86_64`` base channel.
+
 . OPTIONAL: Select any [guimenu]``Add-On System Types``.
     For more information, see https://documentation.suse.com/sles/15-SP3/html/SLES-all/article-modules.html.
+
 . Click btn:[Create Activation Key].
+
 . Click the [guimenu]``Child Channels`` tab and select the required channels.
+
 . Click btn:[Update Key].
 
 
@@ -86,26 +111,41 @@ To switch from the old SLE{nbsp}12{nbsp} base channel to the new SLE{nbsp}15 cha
 Autoinstallation profiles contain all the installation and configuration data needed to install a system.
 They can also contain scripts to be executed after the installation is complete.
 For example scripts that you can use as a starting point, see https://github.com/SUSE/manager-build-profiles/tree/master/AutoYaST.
-For valid AutoYaST upgrade settings, see https://doc.opensuse.org/projects/autoyast/#CreateProfile-upgrade.
+
+For valid AutoYaST upgrade settings, see
+
+link:https://doc.opensuse.org/projects/autoyast/#CreateProfile-upgrade[].
 
 
 
 .Procedure: Creating an Autoinstallation Profile
 . In the {productname} {webui}, navigate to menu:Systems[Autoinstallation > Profiles] and upload your autoinstallation profile script.
-    For example scripts that you can use as a starting point, see https://github.com/SUSE/manager-build-profiles/tree/master/AutoYaST.
-. In the ``Kernel Options`` field, type ``autoupgrade=1``.
-    Optionally, you can also include the ``Y2DEBUG=1`` option.
-    The debug setting is not required but can help with investigating any future problems you might encounter.
 +
+For example scripts that you can use as a starting point, see
++
+https://github.com/SUSE/manager-build-profiles/tree/master/AutoYaST.
+
+. In the ``Kernel Options`` field, type ``autoupgrade=1``.
++
+Optionally, you can also include the ``Y2DEBUG=1`` option.
+The debug setting is not required but can help with investigating any future problems you might encounter.
++
+
 [IMPORTANT]
 ====
 Clients running in Azure cloud must add ``textmode=1 console=ttyS0`` to ``Kernel Options``.
 ====
+
 . Paste the autoinstallation profile or use the file upload field.
+
 . Click btn:[Create] to save.
+
 . When the uploaded profile requires variables to be set, navigate to menu:Systems[Autoinstallation > Profiles], select the profile to edit, and navigate to the [guimenu]``Variables`` tab.
-    Specify the required variables, using this format:
 +
+
+Specify the required variables, using this format:
++
+
 ----
 <key>=<value>
 ----
@@ -119,10 +159,11 @@ Before you begin, check that all the channels referenced in the autoinstallation
 You can monitor the mirroring progress in [path]``/var/log/rhn/reposync/<channel-label>.log``.
 
 
-
 .Procedure: Migrating
 . In the {productname} Server {webui}, navigate to [guimenu]``Systems`` and select the client to be upgraded.
+
 . Navigate to the [guimenu]``Provisioning`` tab, and select the autoinstallation profile you uploaded.
+
 . Click btn:[Schedule Autoinstallation and Finish].
   The system downloads the required files, change the bootloader entries, reboot, and start the upgrade.
 
