--- a/modules/client-configuration/pages/registration-cli.adoc
+++ b/modules/client-configuration/pages/registration-cli.adoc
@@ -19,7 +19,7 @@ For more information, see xref:registration-bootstrap.adoc[].
 ====
 
 This procedure requires that you have installed the [package]``venv-salt-minion`` (Salt bundle) or the [package]``salt-minion`` package on the Salt client before registration.
-For more information the Salt bundle, see xref:client-configuration:registration-methods-saltbundle.adoc[].
+For more information about the Salt bundle, see xref:client-configuration:registration-methods-saltbundle.adoc[].
 
 
 
