--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -28,11 +28,11 @@ For details on supported product versions, see https://www.suse.com/lifecycle.
 
 [IMPORTANT]
 ====
-The operating system you run on a client is supported by the organization that supplies the operating system.
+The operating system running on a client is supported by the organization that supplies the operating system.
 ====
 
-
-[[mgr.supported.clients]]
+ifeval::[{uyuni-content} == true]
+[[uyuni.supported.clients]]
 [cols="1,1,1,1", options="header"]
 .Supported Client Systems
 |===
@@ -87,12 +87,10 @@ The operating system you run on a client is supported by the organization that s
 | {check}
 | {check}
 
-ifeval::[{uyuni-content} == true]
 | {alibabaclo} 2
 | {x86_64}, {aarch64}
 | {cross}
 | {check}
-endif::[]
 
 | {almalinux} 8
 | {x86_64}, {aarch64}
@@ -105,42 +103,22 @@ endif::[]
 | {check}
 
 | {centos} 8
-ifeval::[{uyuni-content} == true]
 | {x86_64}, {ppc64le}, {aarch64}
-endif::[]
-ifeval::[{suma-content} == true]
-| {x86_64}, {aarch64}
-endif::[]
 | {cross}
 | {check}
 
 | {centos} 7
-ifeval::[{uyuni-content} == true]
 | {x86_64}, {ppc64le}, {aarch64}
-endif::[]
-ifeval::[{suma-content} == true]
-| {x86_64}, {aarch64}
-endif::[]
 | {check}
 | {check}
 
 | {debian} 10
-ifeval::[{uyuni-content} == true]
 | {x86_64}, {aarch64}, armv7l, i586
-endif::[]
-ifeval::[{suma-content} == true]
-| {x86_64}
-endif::[]
 | {cross}
 | {check}
 
 | {debian} 9
-ifeval::[{uyuni-content} == true]
 | {x86_64}, {aarch64}, armv7l, i586
-endif::[]
-ifeval::[{suma-content} == true]
-| {x86_64}
-endif::[]
 | {cross}
 | {check}
 
@@ -165,12 +143,7 @@ endif::[]
 | {check}
 
 | {rocky} 8
-ifeval::[{uyuni-content} == true]
 | {x86_64}, {ppc64le}, {aarch64}
-endif::[]
-ifeval::[{suma-content} == true]
-| {x86_64}, {aarch64}
-endif::[]
 | {cross}
 | {check}
 
@@ -185,7 +158,131 @@ endif::[]
 | {check}
 
 |===
+endif::[]
 
+ifeval::[{suma-content} == true]
+[[suma.supported.clients]]
+[cols="1,1,1,1", options="header"]
+.Supported Client Systems
+|===
+
+| Operating System
+| Architecture
+| Traditional Clients
+| Salt Clients
+
+| {sle} 15
+| {x86_64}, {ppc64le}, {ibmz}, ARM
+| {check}
+| {check}
+
+| {sle} 12
+| {x86_64}, {ppc64le}, {ibmz}, ARM
+| {check}
+| {check}
+
+| {sle} 11
+| {x86}, {x86_64}, {ipf}, {ppc64}, {ibmz}
+| {check}
+| {check}
+
+| {sles} for SAP 15
+| {x86_64}, {ppc64le}
+| {check}
+| {check}
+
+| {sles} for SAP 12
+| {x86_64}, {ppc64le}
+| {check}
+| {check}
+
+| {micro}
+| {x86_64}, {ppc64le}, {aarch64}
+| {cross}
+| {check}
+
+| {opensuse} Leap 15
+| {x86_64}, {aarch64}
+| {check}
+| {check}
+
+| {sles} ES 8
+| {x86_64}
+| {cross}
+| {check}
+
+| {sles} ES 7
+| {x86_64}
+| {check}
+| {check}
+
+| {almalinux} 8
+| {x86_64}, {aarch64}
+| {cross}
+| {check}
+
+| {amazon} 2
+| {x86_64}, {aarch64}
+| {cross}
+| {check}
+
+| {centos} 8
+| {x86_64}, {aarch64}
+| {cross}
+| {check}
+
+| {centos} 7
+| {x86_64}, {aarch64}
+| {check}
+| {check}
+
+| {debian} 10
+| {x86_64}
+| {cross}
+| {check}
+
+| {debian} 9
+| {x86_64}
+| {cross}
+| {check}
+
+| {oracle} 8
+| {x86_64}, {aarch64}
+| {cross}
+| {check}
+
+| {oracle} 7
+| {x86_64}, {aarch64}
+| {check}
+| {check}
+
+| {rhel} 8
+| {x86_64}
+| {cross}
+| {check}
+
+| {rhel} 7
+| {x86_64}
+| {check}
+| {check}
+
+| {rocky} 8
+| {x86_64}, {aarch64}
+| {cross}
+| {check}
+
+| {ubuntu} 20.04
+| {x86_64}
+| {cross}
+| {check}
+
+| {ubuntu} 18.04
+| {x86_64}
+| {cross}
+| {check}
+
+|===
+endif::[]
 
 [NOTE]
 ====
