--- a/modules/client-configuration/nav-client-configuration-guide.adoc
+++ b/modules/client-configuration/nav-client-configuration-guide.adoc
@@ -3,7 +3,8 @@
 ifdef::backend-pdf[]
 = [.title]#{productname} {productnumber}#: Client Configuration Guide
 include::./branding/pdf/entities.adoc[]
-:toclevels: 3
+:toc: left
+:toclevels: 4
 :doctype: book
 
 endif::[]
@@ -14,6 +15,7 @@ endif::[]
 *** xref:supported-features-sles.adoc[SLES Supported Features]
 *** xref:supported-features-es.adoc[SLES-ES Supported Features]
 *** xref:supported-features-sle-micro.adoc[SLE Micro Supported Features]
+
 ifeval::[{uyuni-content} == true]
 *** xref:supported-features-alibaba.adoc[Alibaba Cloud Linux Supported Features]
 endif::[]
@@ -55,8 +57,8 @@ endif::[]
 // openSUSE Client Registration
 *** xref:registration-overview-opensuse.adoc[openSUSE Client Registration]
 **** xref:clients-opensuseleap.adoc[openSUSE Leap Clients]
-// Micro Clients
 **** xref:clients-slemicro.adoc[SLE Micro Clients]
+
 ifeval::[{uyuni-content} == true]
 **** xref:clients-microos.adoc[openSUSE MicroOS]
 endif::[]
