documenting venv-salt-minion configuration files
per feedback

--- a/modules/client-configuration/pages/registration-cli.adoc
+++ b/modules/client-configuration/pages/registration-cli.adoc
@@ -19,9 +19,65 @@ For more information, see xref:registration-bootstrap.adoc[].
 ====
 
 This procedure requires that you have installed the [package]``venv-salt-minion`` (Salt bundle) or the [package]``salt-minion`` package on the Salt client before registration.
+Both use differently located configuration files, but the filenames are the same, and a differently named systemd service file.
+
+Salt Bundle ([package]``venv-salt-minion``)::
++
+* [path]``/etc/venv-salt-minion/``
+* [path}``/etc/venv-salt-minion/minion``
+* [path]``/etc/venv-salt-minion/minion.d/NAME.conf``
+* systemd service file: [path]``venv-salt-minion.service``
+
 For more information about the Salt bundle, see xref:client-configuration:registration-methods-saltbundle.adoc[].
 
 
+
+.Procedure: Registering Clients with Salt Bundle Configuration File
+. On the Salt client, open the [literal]``minion`` configuration file.
+  The configuration file is either located at:
++
+----
+/etc/venv-salt-minion/minion
+----
++
+or:
++
+----
+/etc/venv-salt-minion/minion.d/NAME.conf
+----
+. In the file add or edit the FQDN of the {productname} Server or Proxy, and the activation key if any. Also add the other configuration parameters listed below.
++
+----
+master: SERVER.EXAMPLE.COM
+
+grains:
+  susemanager:
+    activation_key: "<Activation_Key_Name>"
+
+server_id_use_crc: adler32
+enable_legacy_startup_events: False
+enable_fqdns_grains: False
+----
+
+. Restart the [systemitem]``venv-salt-minion`` service:
++
+----
+systemctl restart venv-salt-minion
+----
+. On the {productname} Server, accept the new client key; replace [systemitem]``<client>`` with the name of your client:
++
+----
+salt-key -a '<client>'
+----
+
+
+
+Salt ([package]``salt-minion``)::
++
+* [path]``/etc/salt/``
+* [path}``/etc/salt/minion``
+* [path]``/etc/salt/minion.d/NAME.conf``
+* systemd service file: [path]``salt-minion.service``
 
 .Procedure: Registering Clients with Salt Minion Configuration File
 . On the Salt client, open the [literal]``minion`` configuration file.
@@ -62,8 +118,7 @@ systemctl restart salt-minion
 salt-key -a '<client>'
 ----
 
-For more information about the [path]``/etc/salt/minion`` configuration file, see https://docs.saltstack.com/en/latest/ref/configuration/minion.html.
-
+For more information about the Salt minion configuration file, see https://docs.saltstack.com/en/latest/ref/configuration/minion.html.
 
 [WARNING]
 ====
