--- a/modules/administration/pages/patch-management.adoc
+++ b/modules/administration/pages/patch-management.adoc
@@ -35,7 +35,7 @@ When using cloned channels, you must pay attention to the propagation of the ret
 
 Upon cloning vendor channels into your organization, channel patches will be cloned as well.
 
-When the vendor retracts a patch in a channel and {productname} synchronizes this channel (for example, with the nightly job), the "retracted" attribute will not get propagated to the cloned patches and will not be observed by the clients subscribed to cloned channels. To propagate the attribute to your cloned channels use the following ways:
+When the vendor retracts a patch in a channel and {productname} synchronizes this channel (for example, with the nightly job), the "retracted" attribute will not get propagated to the cloned patches and will not be observed by the clients subscribed to cloned channels. To propagate the attribute to your cloned channels use one of the following ways:
 
 * Patch Sync (menu:Software[Manage > cloned channel > Patches > Sync]). This function allows you to align the attributes of patches in your cloned channel to their originals.
 * Content Lifecycle Management. For more information about cloned channels in the context of Content Lifecycle Management, see xref:client-configuration:channels.adoc[].
