Further formatting fixes.

--- a/modules/administration/pages/monitoring.adoc
+++ b/modules/administration/pages/monitoring.adoc
@@ -30,7 +30,7 @@ ifeval::[{uyuni-content} == true]
 endif::[]
 
 You need to install Prometheus and Grafana on a machine separate from the {productname} Server.
-We recommend you use a managed Salt client as your monitoring server.
+We recommend to use a managed Salt client as your monitoring server.
 
 Prometheus fetches metrics using a pull mechanism, so the server must be able to establish TCP connections to monitored clients.
 Clients must have corresponding open ports and be reachable over the network.
@@ -50,7 +50,7 @@ endif::[]
 == Prometheus and Grafana
 
 
-.Prometheus
+=== Prometheus
 
 Prometheus is an open-source monitoring tool that is used to record real-time metrics in a time-series database.
 Metrics are pulled via HTTP, enabling high performance and scalability.
@@ -69,7 +69,7 @@ http_requests_total{status="200", method="GET"}  @1557331801.111  42236
 Each application or system being monitored must expose metrics in the format above, either through code instrumentation or Prometheus exporters.
 
 
-.Prometheus Exporters
+=== Prometheus Exporters
 
 Exporters are libraries that help with exporting metrics from third-party systems as Prometheus metrics.
 Exporters are useful whenever it is not feasible to instrument a given application or system with Prometheus metrics directly.
@@ -79,7 +79,7 @@ The Prometheus community provides a list of official exporters, and more can be 
 For more information and an extensive list of exporters, see https://prometheus.io/docs/instrumenting/exporters/.
 
 
-.Grafana
+=== Grafana
 
 Grafana is a tool for data visualization, monitoring, and analysis.
 It is used to create dashboards with panels representing specific metrics over a set period of time.
