--- a/modules/administration/pages/patch-management.adoc
+++ b/modules/administration/pages/patch-management.adoc
@@ -45,7 +45,7 @@ When the vendor retracts a patch in a channel and {productname} synchronizes thi
 
 When you create multiple vendor channel clones in your organization, the patches are not cloned multiple times, but are shared between cloned channels. As a consequence, when you synchronize your cloned patch (either using the patch sync function or with Content Lifecycle Management mentioned above), all channels using the cloned patch will observe that change.
 
-.Example
+.Example:
 . Consider two Content Lifecycle Management projects [literal]``prj1`` and [literal]``prj2``
 . Both of these projects have 2 environments [literal]``dev`` and [literal]``test``
 . Both of these projects have a vendor channel set as a source channel
