--- a/modules/administration/pages/ansible-integration.adoc
+++ b/modules/administration/pages/ansible-integration.adoc
@@ -21,6 +21,7 @@ For Control Nodes running operating systems other than SUSE Linux Enterprise, us
 
 {productname} enables system administrators to operate their Ansible Control Nodes.
 Supported features are:
+
 * introspection of inventory files
 * discovery of playbooks
 * execution of playbooks
@@ -31,11 +32,11 @@ Supported features are:
 == Requirements
 
 To use Ansible features, you need to register your Ansible Control Node system as a Salt client to your {productname} Server.
-When registered, you must enable the ``Ansible Control Node`` system type in the [guimenu]``Add-on System Types`` on the menu:System Details[Properties] page of that system.
+When registered, you must enable the ``Ansible Control Node`` system type in the [guimenu]``Add-on System Types`` on the [guimenu]``System Details > Properties`` page of that system.
 
-Enabling this system type ensures that the ``ansible`` package is installed on the system by adding it in the highstate and activates the Ansible features under the menu:System Details[Ansible] page.
+Enabling this system type ensures that the ``ansible`` package is installed on the system by adding it in the highstate and activates the Ansible features under the [guimenu]``System Details > Ansible`` page.
 
-As the next step, configure the paths to your Ansible inventories and playbooks on the menu:System Details[Ansible > Control Node] page.
+As the next step, configure the paths to your Ansible inventories and playbooks on the [guimenu]``System Details > Ansible > Control Node`` page.
 As an inventory path, you can use the typical ansible inventory path [literal]``/etc/ansible/hosts``.
 As a playbook directory, you can use any directory on the control node, where your playbooks reside.
 A playbook directory either directly contains the [literal]``site.yml`` or contains subdirectories with this file.
@@ -46,7 +47,7 @@ A playbook directory either directly contains the [literal]``site.yml`` or conta
 == Inventory introspection
 
 After defining an inventory path, you can use {productname} to introspect its contents.
-You can do so on the menu:System Details[Ansible > Inventories] page.
+You can do so on the [guimenu]``System Details > Ansible > Inventories`` page.
 Clicking an inventory path in this page executes the inventory introspection on the Control Node in real-time.
 
 
@@ -54,7 +55,7 @@ Clicking an inventory path in this page executes the inventory introspection on 
 [[at.ansible.playbook-discovery]]
 == Playbook discovery
 
-After defining a playbook directory, you can discover playbooks on the menu:System Details[Ansible > Playbooks] page.
+After defining a playbook directory, you can discover playbooks on the [guimenu``System Details > Ansible > Playbooks`` page.
 
 As with the inventory introspection, the playbook discovery operations run on the Control Node in real-time.
 
@@ -63,7 +64,7 @@ As with the inventory introspection, the playbook discovery operations run on th
 [[at.ansible.playbook-execution]]
 == Playbook execution
 
-You can schedule a playbook execution from the menu:System Details[Ansible > Playbooks] page.
+You can schedule a playbook execution from the [guimenu]``System Details > Ansible > Playbooks`` page.
 After selecting the playbook you wish to execute, you can select the inventory file for the execution from the drop-down menu.
 If you do not select any item, the default inventory configured in your Control Node will be used.
 The drop-down menu is populated with the inventories you defined in your Inventory paths and with inventories that have been locally discovered in your playbook directories.
