Removing guimenu changes.

--- a/modules/administration/pages/subscription-matching.adoc
+++ b/modules/administration/pages/subscription-matching.adoc
@@ -5,7 +5,7 @@ Your {suse} products require subscriptions, which are managed by the {scc} (SCC)
 {productname} runs a nightly report checking the subscription status of all your registered clients against your SCC account.
 The report gives you information about which clients consume which subscriptions, how many subscriptions you have remaining and available to use, and which clients do not have a current subscription.
 
-Navigate to [guimenu]``Audit > Subscription Matching`` to see the report.
+Navigate to menu:Audit[Subscription Matching] to see the report.
 
 The [guimenu]``Subscriptions Report`` tab gives information about current and expiring subscriptions.
 
@@ -21,7 +21,7 @@ The [guimenu]``Messages`` tab shows any errors that occurred during the matching
 You can also download the reports in .csv format, or access them from that command prompt in the [path]``/var/lib/spacewalk/subscription-matcher/`` directory.
 
 By default, the subscription matcher runs daily, at midnight.
-To change this, navigate to [guimenu]``Admin[Task Schedules]`` and click ``gatherer-matcher-default``.
+To change this, navigate to menu:Admin[Task Schedules] and click ``gatherer-matcher-default``.
 Change the schedule as required, and click btn:[Update Schedule].
 
 Because the report can only match current clients with current subscriptions, you might find that the matches change over time.
