Fix the channel tables for Rocky Linux and AlmaLinux

--- a/modules/client-configuration/pages/clients-rocky.adoc
+++ b/modules/client-configuration/pages/clients-rocky.adoc
@@ -31,7 +31,7 @@ For example, when working with `x86_64` architecture, you need this product:
 
 [[rocky-channels-wizard]]
 [cols="1,1", options="header"]
-.CentOS Products - WebUI
+.{rocky} Products - WebUI
 |===
 | OS Version | Product Name
 | {rocky} 8 | {rocky} 8 x86_64
@@ -44,7 +44,7 @@ The channels you need for this procedure are:
 
 [[rocky-channels-suma-cli]]
 [cols="1,1", options="header"]
-.CentOS Channels - CLI
+.{rocky} Channels - CLI
 |===
 | OS Version | Base Channel
 | {rocky} 8 | rockylinux8-x86_64
@@ -59,7 +59,7 @@ The channels you need for this procedure are:
 
 [[rocky-channels-uyuni-cli]]
 [cols="1,1,1,1", options="header"]
-.CentOS Channels - CLI
+.{rocky} Channels - CLI
 |===
 | OS Version | Base Channel | Client Channel       | AppStream Channel
 | {rocky} 8 | rockylinux8      | rockylinux8-uyuni-client | rockylinux8-appstream
