--- a/modules/client-configuration/pages/clients-almalinux.adoc
+++ b/modules/client-configuration/pages/clients-almalinux.adoc
@@ -29,7 +29,7 @@ For example, when working with `x86_64` architecture, you need this product:
 
 [[almalinux-channels-wizard]]
 [cols="1,1", options="header"]
-.CentOS Products - WebUI
+.{almalinux} Products - WebUI
 |===
 | OS Version | Product Name
 | {almalinux} 8 | {almalinux} 8 x86_64
@@ -42,7 +42,7 @@ The channels you need for this procedure are:
 
 [[almalinux-channels-suma-cli]]
 [cols="1,1", options="header"]
-.CentOS Channels - CLI
+.{almalinux} Channels - CLI
 |===
 | OS Version | Base Channel
 | {almalinux} 8 | almalinux8-x86_64
@@ -57,7 +57,7 @@ The channels you need for this procedure are:
 
 [[almalinux-channels-uyuni-cli]]
 [cols="1,1,1,1", options="header"]
-.CentOS Channels - CLI
+.{almalinux} Channels - CLI
 |===
 | OS Version | Base Channel | Client Channel       | AppStream Channel
 | {almalinux} 8 | almalinux8      | almalinux8-uyuni-client | almalinux8-appstream
