Fix the channel tables for Rocky Linux and AlmaLinux

--- a/modules/client-configuration/pages/clients-almalinux.adoc
+++ b/modules/client-configuration/pages/clients-almalinux.adoc
@@ -43,7 +43,7 @@ For example, when working with `x86_64` architecture, you need this product:
 
 [[almalinux-channels-wizard]]
 [cols="1,1", options="header"]
-.CentOS Products - WebUI
+.{almalinux} Products - WebUI
 |===
 
 | OS Version | Product Name
@@ -58,7 +58,7 @@ The channels you need for this procedure are:
 
 [[almalinux-channels-suma-cli]]
 [cols="1,1", options="header"]
-.CentOS Channels - CLI
+.{almalinux} Channels - CLI
 |===
 
 | OS Version | Base Channel
@@ -75,7 +75,7 @@ The channels you need for this procedure are:
 
 [[almalinux-channels-uyuni-cli]]
 [cols="1,1,1,1", options="header"]
-.CentOS Channels - CLI
+.{almalinux} Channels - CLI
 |===
 
 | OS Version | Base Channel | Client Channel       | AppStream Channel
