--- a/modules/client-configuration/pages/clients-rocky.adoc
+++ b/modules/client-configuration/pages/clients-rocky.adoc
@@ -31,7 +31,7 @@ For example, when working with `x86_64` architecture, you need this product:
 
 [[rocky-channels-wizard]]
 [cols="1,1", options="header"]
-.CentOS Products - WebUI
+.{rocky} Products - WebUI
 |===
 
 | OS Version | Product Name
@@ -45,7 +45,7 @@ The channels you need for this procedure are:
 
 [[rocky-channels-suma-cli]]
 [cols="1,1", options="header"]
-.CentOS Channels - CLI
+.{rocky} Channels - CLI
 |===
 
 | OS Version | Base Channel
@@ -61,7 +61,7 @@ The channels you need for this procedure are:
 
 [[rocky-channels-uyuni-cli]]
 [cols="1,1,1,1", options="header"]
-.CentOS Channels - CLI
+.{rocky} Channels - CLI
 |===
 
 | OS Version | Base Channel | Client Channel       | AppStream Channel
