Fix the channel tables for Rocky Linux and AlmaLinux

--- a/modules/client-configuration/pages/clients-almalinux.adoc
+++ b/modules/client-configuration/pages/clients-almalinux.adoc
@@ -25,7 +25,7 @@ The products you need for this procedure are:
 
 [[almalinux-channels-wizard]]
 [cols="1,1", options="header"]
-.CentOS Products - WebUI
+.{almalinux} Products - WebUI
 |===
 | OS Version | Product Name
 | {almalinux} 8 | {almalinux} 8 x86_64
@@ -38,7 +38,7 @@ The channels you need for this procedure are:
 
 [[almalinux-channels-suma-cli]]
 [cols="1,1", options="header"]
-.CentOS Channels - CLI
+.{almalinux} Channels - CLI
 |===
 | OS Version | Base Channel
 | {almalinux} 8 | almalinux8-x86_64
@@ -53,7 +53,7 @@ The channels you need for this procedure are:
 
 [[almalinux-channels-uyuni-cli]]
 [cols="1,1,1,1", options="header"]
-.CentOS Channels - CLI
+.{almalinux} Channels - CLI
 |===
 | OS Version | Base Channel | Client Channel       | AppStream Channel
 | {almalinux} 8 | almalinux8      | almalinux8-uyuni-client | almalinux8-appstream
