--- a/modules/client-configuration/pages/clients-rocky.adoc
+++ b/modules/client-configuration/pages/clients-rocky.adoc
@@ -27,7 +27,7 @@ The products you need for this procedure are:
 
 [[rocky-channels-wizard]]
 [cols="1,1", options="header"]
-.CentOS Products - WebUI
+.{rocky} Products - WebUI
 |===
 | OS Version | Product Name
 | {rocky} 8 | {rocky} 8 x86_64
@@ -40,7 +40,7 @@ The channels you need for this procedure are:
 
 [[rocky-channels-suma-cli]]
 [cols="1,1", options="header"]
-.CentOS Channels - CLI
+.{rocky} Channels - CLI
 |===
 | OS Version | Base Channel
 | {rocky} 8 | rockylinux8-x86_64
@@ -55,7 +55,7 @@ The channels you need for this procedure are:
 
 [[rocky-channels-uyuni-cli]]
 [cols="1,1,1,1", options="header"]
-.CentOS Channels - CLI
+.{rocky} Channels - CLI
 |===
 | OS Version | Base Channel | Client Channel       | AppStream Channel
 | {rocky} 8 | rockylinux8      | rockylinux8-uyuni-client | rockylinux8-appstream
