--- a/modules/client-configuration/pages/registration-cli.adoc
+++ b/modules/client-configuration/pages/registration-cli.adoc
@@ -19,7 +19,8 @@ For more information, see xref:registration-bootstrap.adoc[].
 ====
 
 This procedure requires that you have installed the [package]``venv-salt-minion`` (Salt bundle) or the [package]``salt-minion`` package on the Salt client before registration.
-Both use differently located configuration files, but the filenames are the same, and a differently named systemd service file.
+Both use configuration files in different locations and filenames remain the same.
+The systemd service filename is different.
 
 Salt Bundle ([package]``venv-salt-minion``)::
 +
