--- a/modules/client-configuration/pages/registration-methods-saltbundle.adoc
+++ b/modules/client-configuration/pages/registration-methods-saltbundle.adoc
@@ -11,7 +11,8 @@ If you bootstrap new clients, registration with the Salt bundle is the default m
 You can switch existing clients to the Salt bundle method.
 If you switch, the [package]``salt-minion`` package and its Python version and the Python modules will stay installed.
 
-The Salt state [literal]``util.mgr_switch_to_venv_minion`` is available to switch from [package]``salt-minion`` to [package]``venv-salt-minion``.  It is recommended to switch to [package]``venv-salt-minion`` in two steps:
+The Salt state [literal]``util.mgr_switch_to_venv_minion`` is available to switch from [package]``salt-minion`` to [package]``venv-salt-minion``.
+It is recommended to switch to [package]``venv-salt-minion`` in two steps to avoid trouble with shifting processes:
 
 .Procedure: Switching with [literal]``util.mgr_switch_to_venv_minion`` state to [package]``venv-salt-minion``
 
@@ -19,7 +20,7 @@ The Salt state [literal]``util.mgr_switch_to_venv_minion`` is available to switc
   This will result in the switch to [package]``venv-salt-minion`` with copying configuration files etc.
   It will not cleaning up the original [package]``salt-minion`` configurations and its packages.
 . Apply [literal]``util.mgr_switch_to_venv_minion`` with [literal]``mgr_purge_non_venv_salt`` set to [literal]``True`` to remove [package]``salt-minion`` and with [literal]``mgr_purge_non_venv_salt_files`` set to [literal]``True`` to remove all the files related to [package]``salt-minion``.
-
+This second step repeats the first step, and then removes the old configuration files and the now obsolete [package]``salt-minion`` package.
 
 On the other hand, it is also possible to avoid installing the Salt bundle and keep using [package]``salt-minion`` instead.
 In this case specify one of these options:
