--- a/modules/client-configuration/pages/registration-methods-saltbundle.adoc
+++ b/modules/client-configuration/pages/registration-methods-saltbundle.adoc
@@ -18,7 +18,7 @@ It is recommended to switch to [package]``venv-salt-minion`` in two steps to avo
 
 . Apply [literal]``util.mgr_switch_to_venv_minion`` with no pillar specified first.
   This will result in the switch to [package]``venv-salt-minion`` with copying configuration files etc.
-  It will not cleaning up the original [package]``salt-minion`` configurations and its packages.
+  It will not clean up the original [package]``salt-minion`` configurations and its packages.
 . Apply [literal]``util.mgr_switch_to_venv_minion`` with [literal]``mgr_purge_non_venv_salt`` set to [literal]``True`` to remove [package]``salt-minion`` and with [literal]``mgr_purge_non_venv_salt_files`` set to [literal]``True`` to remove all the files related to [package]``salt-minion``.
 This second step repeats the first step, and then removes the old configuration files and the now obsolete [package]``salt-minion`` package.
 
