Salt bundle #16336 keichwa (#1309)
* Salt bundle documentation
https://github.com/SUSE/spacewalk/issues/16336
* using salt-minion instead of the bundle where appropriate
* bootstrap state setting
* back references to the Salt bundle docs
* remove Advanced Systems Management module as sle12 req
* webui method currently requires python to be installed in advance
* enable description of util.mgr_switch_to_venv_minion state
* Update modules/client-configuration/pages/registration-methods-saltbundle.adoc
Co-authored-by: Alexander Graul <agraul@suse.com>
Co-authored-by: Victor Zhestkov <35733135+vzhestkov@users.noreply.github.com>
Co-authored-by: Julio González Gil <juliogonzalez@users.noreply.github.com>
Co-authored-by: Pablo Suárez Hernández <psuarezhernandez@suse.com>

--- a/modules/client-configuration/pages/registration-webui.adoc
+++ b/modules/client-configuration/pages/registration-webui.adoc
@@ -5,6 +5,9 @@ Registering clients with the {productname} {webui} works for Salt clients only.
 
 If you are bootstrapping Salt clients using the {webui}, you need to ensure that the client system has Python installed before you begin.
 For Salt clients running {sles}{nbsp}12 or older, you also need the [package]``python-xml`` package.
+// FIXME: change Salt bundle, when implemented
+// If you use the Salt bundle, which now is the default, the needed Python environment will be provided automatically.
+// For more information, see xref:client-configuration:registration-methods-saltbundle.adoc[].
 
 [IMPORTANT]
 ====
