Revert "Revert "Salt bundle #16336 keichwa (#1309)" (#1322)"
This reverts commit cb7e6bbd135c39b39bd729392f1cbf890b04d18d.

--- a/modules/client-configuration/nav-client-configuration-guide.adoc
+++ b/modules/client-configuration/nav-client-configuration-guide.adoc
@@ -48,6 +48,7 @@ endif::[]
 ** xref:registration-overview.adoc[Client Registration]
 // SLE Client Registration
 *** xref:registration-methods.adoc[Registration Methods]
+**** xref:registration-methods-saltbundle.adoc[Salt Bundle]
 **** xref:registration-webui.adoc[Register with the Web UI]
 **** xref:registration-bootstrap.adoc[Register with Bootstrap]
 **** xref:registration-cli.adoc[Register on the Command Line]
