more on 'suite'
per feedback

--- a/modules/administration/pages/custom-channels.adoc
+++ b/modules/administration/pages/custom-channels.adoc
@@ -79,8 +79,9 @@ Add Debian non-flat repositories using ``uyuni_suite``, ``uyuni_component``, and
 
 ``uyuni_suite``::
 is mandatory.
+In Debian documentation, this is also known as [literal]``distribution``.
 With this parameter you specify the apt source.
-Without this parameter the original approach is used.
+Without this parameter or if it ends with a ``/``, the original approach is used (= flat repository).
 ``uyuni_component``::
 is optional.
 This parameter can specify only one component.
