--- a/modules/administration/pages/custom-channels.adoc
+++ b/modules/administration/pages/custom-channels.adoc
@@ -81,7 +81,8 @@ Add Debian non-flat repositories using ``uyuni_suite``, ``uyuni_component``, and
 is mandatory.
 In Debian documentation, this is also known as [literal]``distribution``.
 With this parameter you specify the apt source.
-Without this parameter or if it ends with a ``/``, the original approach is used (= flat repository).
+Without this parameter the original approach is used.
+If the parameter ends with ``/``, the repository is identified as flat.
 ``uyuni_component``::
 is optional.
 This parameter can specify only one component.
