--- a/modules/administration/pages/custom-channels.adoc
+++ b/modules/administration/pages/custom-channels.adoc
@@ -62,6 +62,7 @@ For more information, see xref:administration:tshoot-registertradrhel.adoc[].
 ====
 
 
+
 .Procedure: Creating a Software Repository
 . In the {productname} {webui}, navigate to menu:Software[Manage > Repositories], and click btn:[Create Repository].
 . On the [guimenu]``Create Repository`` page, give your repository a label (for example, [systemitem]``my-tools-sles15sp1-x86_64-repo``).
@@ -70,6 +71,70 @@ For more information, see xref:administration:tshoot-registertradrhel.adoc[].
 . Uncheck the [guimenu]``Has Signed Metadata?`` check box.
 . OPTIONAL: Complete the SSL fields if your repository requires client certificate authentication.
 . Click btn:[Create Repository].
+
+[NOTE]
+====
+Add Debian non-flat repositories using ``uyuni_suite``, ``uyuni_component``, and ``uyuni_arch`` query parameters.
+====
+
+``uyuni_suite``::
+is mandatory.
+In Debian documentation, this is also known as [literal]``distribution``.
+With this parameter you specify the apt source.
+Without this parameter the original approach is used.
+If the parameter ends with ``/``, the repository is identified as flat.
+``uyuni_component``::
+is optional.
+This parameter can specify only one component.
+It is not possible to list the components.
+An apt source entry allows to specify multiple components, but for Uyuni it is not possible.
+Instead you must create separate repository for each component.
+``uyuni_arch``::
+is optional.
+If omitted the architecture name is calculated with a SQL query for the channel from the database.
+Specify ``uyuni_arch`` explicitly if it does not match the architecture of the channel (sometimes architecture naming is ambiguous).
+
+Here are some examples:
+
+[[debian-nonflat-repo]]
+[cols="1,1", options="header"]
+.Debian non-flat repository mapping
+|===
+| Type             | Source line / URL
+| apt source line  | ``deb https://pkg.jenkins.io/debian-stable binary/``
+| URL mapping      | ``https://pkg.jenkins.io/debian-stable?uyuni_suite=binary/``
+| {nbsp}           |
+| apt source line  | ``deb https://deb.debian.org/debian/dists stable main``
+| URL mapping      | ``https://deb.debian.org/debian/dists?uyuni_suite=stable&uyuni_component=main``
+|===
+
+
+
+[NOTE]
+====
+Find here background information about the Debian repository definition format.
+This information is based on https://wiki.debian.org/DebianRepository/Format#Overview.
+
+The repository definition format is as follows:
+
+----
+deb uri suite [component1] [component2] [...]
+----
+
+For example:
+
+----
+deb https://deb.debian.org/debian/dists stable main
+----
+
+or
+
+----
+deb https://pkg.jenkins.io/debian-stable binary/
+----
+
+For each pair of ``suite`` and ``component`` the spezification defines a distinct URL calculated on the base URL ``+ suite + component``.
+====
 
 
 
