--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -113,12 +113,12 @@ ifeval::[{uyuni-content} == true]
 | {check}
 
 | {debian} 10
-| {x86_64}, {aarch64}, armv7l, i586
+| {x86_64} (= amd64), {aarch64}, armv7l, i586
 | {cross}
 | {check}
 
 | {debian} 9
-| {x86_64}, {aarch64}, armv7l, i586
+| {x86_64} (= amd64), {aarch64}, armv7l, i586
 | {cross}
 | {check}
 
@@ -272,12 +272,12 @@ ifeval::[{suma-content} == true]
 | {check}
 
 | {ubuntu} 20.04
-| {x86_64}
+| {x86_64} (= amd64)
 | {cross}
 | {check}
 
 | {ubuntu} 18.04
-| {x86_64}
+| {x86_64} (= amd64)
 | {cross}
 | {check}
 
@@ -289,6 +289,12 @@ endif::[]
 {rhel} 6, {oracle} 6, CentOS 6, {sles}-ES 6, and {ubuntu} 16.04 are end-of-life upstream and no longer supported by {suse} as client operating systems.
 SUSE Manager Client Tools for these operating systems are still provided from SCC for convenience.
 ====
+
+[NOTE]
+====
+{debian} and {ubuntu} lists the {x86_64} architecture as amd64.
+====
+
 
 
 == Supported Tools Packages
