Collection of random fixes.

--- a/modules/administration/pages/master-fingerprint.adoc
+++ b/modules/administration/pages/master-fingerprint.adoc
@@ -2,10 +2,9 @@
 = Set up a Client to Master Validation Fingerprint
 
 In highly secure network configurations you may wish to ensure your Salt clients are connecting a specific master.
-To set up validation from client to master enter the master's fingerprint within the [path]``/etc/salt/minion`` configuration file.
+To set up validation from client to master enter the master's fingerprint within the [path]``/etc/salt/minion`` configuration file, see the following procedure:
 
-See the following procedure:
-
+.Procedure: Adding Master's Fingerprint to Client
 . On the master, at the command prompt, as root, use this command to find the ``master.pub`` fingerprint:
 +
 
