Small random fixes (#1318)
* Random fixes in books.

* Fixed list formatting.

* For consistency across all our books, removing title from admonition.

* Naming a procedure.

* Formatted the definition to stand out.

* Made the instruction clearer.

* Further formatting fixes.

* More formatting fixes.

* Removing guimenu changes.

* Removed capitalisation.

* Removing guimenu changes.

--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -17,7 +17,6 @@ They can be on-premise, or on public cloud, private cloud, hybrid cloud or even 
 
 
 [IMPORTANT]
-.Accessibility
 ====
 If you cannot use the {productname} {webui}, almost all functionality (with the exception of virtualization tasks) is available from the command prompt.
 All command line tools can be used with assistive technology tools.
@@ -28,7 +27,7 @@ Additionally, you can interact with {productname} using the XML-RPC API.
 * For more information about [command]``spacecmd``, see xref:reference:spacecmd-intro.adoc[].
 * For more information about other command line tools, see xref:reference:command-line-tools.adoc[].
 ifeval::[{suma-content} == true]
-* For more information about the API, see https://documentation.suse.com/external-tree/en-us/suma/4.2/pdf/susemanager_api_doc_color_en.pdf.
+* For more information about the API, see link:https://documentation.suse.com/suma/4.2/pdf/4.2_pdf_susemanager_api_doc_color_en.pdf[].
 endif::[]
 ifeval::[{uyuni-content} == true]
 * For more information about the API, see https://www.uyuni-project.org/uyuni-docs-api/uyuni/index.html.
