--- a/modules/large-deployments/pages/tuning.adoc
+++ b/modules/large-deployments/pages/tuning.adoc
@@ -380,7 +380,7 @@ This section contains information about the available parameters.
 | Value default        | 1
 | Value recommendation | 1-10
 | Location             | [path]``/etc/rhn/rhn.conf``
-| Example              | `taskomatic.com.redhat.rhn.taskomatic.task.MinionActionExecutor.parallel_threads = 10`
+| Example              | `taskomatic.minion_action_executor.parallel_threads = 10`
 |===
 
 [[SSHMinionActionExecutor-parallel-threads]]
@@ -393,7 +393,7 @@ This section contains information about the available parameters.
 | Value default        | 20
 | Value recommendation | 20-100
 | Location             | [path]``/etc/rhn/rhn.conf``
-| Example              | `taskomatic.com.redhat.rhn.taskomatic.task.SSHMinionActionExecutor.parallel_threads = 40`
+| Example              | `taskomatic.sshminion_action_executor.parallel_threads = 40`
 |===
 
 
