Replaced obsolete patch instruction with update

--- a/modules/upgrade/pages/server-minor-upgrade-uyuni.adoc
+++ b/modules/upgrade/pages/server-minor-upgrade-uyuni.adoc
@@ -19,6 +19,8 @@ Performing a minor upgrade is similar to installing operating system package upd
 By default, several update repositories are configured and enabled for the {productname} Server.
 New and updated packages become available automatically.
 
+It is recommended you make a backup of the server before upgrading.
+
 . On the {productname} Server, at the command prompt, as root, stop the spacewalk services:
 +
 
@@ -35,24 +37,21 @@ zypper ref
 ----
 +
 
-. List available patches:
+// Zypper list-patches or patch doesn't update Uyuni
+. Update new packages: (Repeat this if prompted by zypper)
 +
 
 ----
-zypper list-patches
+zypper up
 ----
 +
 
-. Apply all available patches:
+. If zypper reports that the Uyuni package won't be upgraded, run that manually:
 +
 
 ----
-zypper patch
+zypper install Uyuni-Server-Release
 ----
-+
-
-This command only applies patches.
-To apply all outstanding updates, use [command]``zypper up`` instead.
 +
 
 . Restart the spacewalk services:
