Applying suggested change

--- a/modules/upgrade/pages/server-minor-upgrade-uyuni.adoc
+++ b/modules/upgrade/pages/server-minor-upgrade-uyuni.adoc
@@ -46,7 +46,7 @@ zypper up
 ----
 +
 
-. If zypper reports that the Uyuni package won't be upgraded, run that manually:
+. If Zypper reports that the Uyuni package will not be upgraded, run the following command manually:
 +
 
 ----
