--- a/modules/retail/pages/retail-deploy-terminals-other.adoc
+++ b/modules/retail/pages/retail-deploy-terminals-other.adoc
@@ -281,7 +281,7 @@ autosign_grains:
 
 
 
-.Procedure: Configuring Saltboot to Auto-Sign During PXE Boot
+.Procedure: Configuring Saltboot to Auto-Sign During PXE Boot (applicable only for SLE15 templates)
 . Configure the PXE formula to specify these kernel parameters during booting:
 +
 ----
