--- a/modules/retail/pages/retail-deploy-terminals-auto.adoc
+++ b/modules/retail/pages/retail-deploy-terminals-auto.adoc
@@ -23,7 +23,12 @@ When you have configured Saltboot using one of these methods, you need to config
 
 
 
-.Procedure: Configuring Saltboot to Send Auto-Signed Grain Once
+[[retail.deployterminals.auto.once]]
+== Configure Saltboot to Send Auto-Signed Grain Once
+
+
+
+.Procedure: Configuring Saltboot to Send Auto-Signed Grain Once
 . On the branch server, create a configuration file called [path]``/etc/salt/minion.d/autosign-grains-onetime.conf``.
 . Edit the new configuration file with these details.
   You can use any value you like as the auto-sign key:
@@ -46,7 +51,12 @@ cpio -H newc -o | gzip >> /srv/saltboot/boot/initrd.gz
 
 
 
-.Procedure: Configuring Saltboot to Keep Auto-Signed Grains
+[[retail.deployterminals.auto.keep]]
+== Configure Saltboot to Keep Auto-Signed Grains
+
+
+
+.Procedure: Configuring Saltboot to Keep Auto-Signed Grains
 . In the location where the image source is built, such as a build host or source repository, create a configuration file called [path]``etc/salt/minion.d/autosign-grains.conf``.
 . Edit the new configuration file with these details.
   You can use any value you like as the auto-sign key:
@@ -63,7 +73,12 @@ autosign_grains:
 
 
 
-.Procedure: Configuring Saltboot to Auto-Sign During PXE Boot
+[[retail.deployterminals.auto.pxe]]
+== Configure Saltboot to Auto-Sign During PXE Boot
+
+
+
+.Procedure: Configuring Saltboot to Auto-Sign During PXE Boot
 . Configure the PXE formula to specify these kernel parameters during booting:
 +
 ----
@@ -72,6 +87,10 @@ SALT_AUTOSIGN_GRAINS=autosign_key:<AUTOSIGN_KEY>
 . PXE boot the Salt client.
   The formula creates the [path]``./etc/salt/minion.d/autosign-grains-onetime.conf`` configuration file and passes it to ``initrd``.
 
+
+
+[[retail.deployterminals.auto.server]]
+== Configure the Server to Auto-Accept
 
 When you have configured Saltboot using one of these methods, you need to configure the server to accept them.
 The server stores the autosign keys in a file within the [path]``/etc/salt/master.d/`` directory.
