reference created sections

--- a/modules/retail/pages/retail-deploy-terminals-auto.adoc
+++ b/modules/retail/pages/retail-deploy-terminals-auto.adoc
@@ -14,12 +14,17 @@ There are three different ways you can configure auto-signed grains:
 
 * Configure Saltboot to send automatically signed grains once and then delete them.
   To do this, append the Saltboot configuration to an existing ``initrd``.
+  For more information, see xref:retail-deploy-terminals-auto.adoc#retail.deployterminals.auto.once[].
 * Choose to keep the automatically signed grains on the Salt client.
   To do this, include the configuration file in the image source before the client image is built.
   After booting, the auto-signed grain is stored on the client as a regular Salt grain.
+  For more information, see xref:retail-deploy-terminals-auto.adoc#retail.deployterminals.auto.keep[].
 * Configure Saltboot during PXE boot using kernel parameters.
+  For more information, see xref:retail-deploy-terminals-auto.adoc#retail.deployterminals.auto.pxe[].
 
-When you have configured Saltboot using one of these methods, you need to configure the {productname} Server to accept them.
+
+When you have configured Saltboot using one of these methods, you need to configure the {productname} Server to accept them.  For more information, see xref:retail-deploy-terminals-auto.adoc#retail.deployterminals.auto.server[].
+
 
 
 
