--- a/modules/retail/pages/retail-deploy-terminals-auto.adoc
+++ b/modules/retail/pages/retail-deploy-terminals-auto.adoc
@@ -84,7 +84,7 @@ autosign_grains:
 // For SLE12 and SLE11 templates, the procedure is the following:
 .Procedure: Configuring Saltboot to Keep Auto-Signed Grains (SLE 11 and SLE 12)
 . In the location where the image source is built, such as a build host or source repository, create a configuration file called [path]``etc/salt/minion.d/autosign-grains.conf``.
-  This must be outside of the root directory provided by the template.
+  This must be outside of the [path]``root`` directory provided by the template.
   This way you prevent the inclusion of unwanted files in the ``initrd``.
 . Edit the new configuration file with these details.
   You can use any value you like as the auto-sign key:
