--- a/modules/retail/pages/retail-deploy-terminals-auto.adoc
+++ b/modules/retail/pages/retail-deploy-terminals-auto.adoc
@@ -14,16 +14,26 @@ There are three different ways you can configure auto-signed grains:
 
 * Configure Saltboot to send automatically signed grains once and then delete them.
   To do this, append the Saltboot configuration to an existing ``initrd``.
+  For more information, see xref:retail-deploy-terminals-auto.adoc#retail.deployterminals.auto.once[].
 * Choose to keep the automatically signed grains on the Salt client.
   To do this, include the configuration file in the image source before the client image is built.
   After booting, the auto-signed grain is stored on the client as a regular Salt grain.
+  For more information, see xref:retail-deploy-terminals-auto.adoc#retail.deployterminals.auto.keep[].
 * Configure Saltboot during PXE boot using kernel parameters.
-
-When you have configured Saltboot using one of these methods, you need to configure the {productname} Server to accept them.
-
+  For more information, see xref:retail-deploy-terminals-auto.adoc#retail.deployterminals.auto.pxe[].
 
 
-.Procedure: Configuring Saltboot to Send Auto-Signed Grain Once
+When you have configured Saltboot using one of these methods, you need to configure the {productname} Server to accept them.  For more information, see xref:retail-deploy-terminals-auto.adoc#retail.deployterminals.auto.server[].
+
+
+
+
+[[retail.deployterminals.auto.once]]
+== Configure Saltboot to Send Auto-Signed Grain Once
+
+
+
+.Procedure: Configuring Saltboot to Send Auto-Signed Grain Once
 . On the branch server, create a configuration file called [path]``/etc/salt/minion.d/autosign-grains-onetime.conf``.
 . Edit the new configuration file with these details.
   You can use any value you like as the auto-sign key:
@@ -46,7 +56,15 @@ cpio -H newc -o | gzip >> /srv/saltboot/boot/initrd.gz
 
 
 
-.Procedure: Configuring Saltboot to Keep Auto-Signed Grains
+[[retail.deployterminals.auto.keep]]
+== Configure Saltboot to Keep Auto-Signed Grains
+
+Use different procedure for SLE 15 and SLE 11/12.
+
+
+
+// For SLE15 templates, the procedure is the following:
+.Procedure: Configuring Saltboot to Keep Auto-Signed Grains (SLE 15)
 . In the location where the image source is built, such as a build host or source repository, create a configuration file called [path]``etc/salt/minion.d/autosign-grains.conf``.
 . Edit the new configuration file with these details.
   You can use any value you like as the auto-sign key:
@@ -63,7 +81,47 @@ autosign_grains:
 
 
 
-.Procedure: Configuring Saltboot to Auto-Sign During PXE Boot
+// For SLE12 and SLE11 templates, the procedure is the following:
+.Procedure: Configuring Saltboot to Keep Auto-Signed Grains (SLE 11 and SLE 12)
+. In the location where the image source is built, such as a build host or source repository, create a configuration file called [path]``etc/salt/minion.d/autosign-grains.conf``.
+  This must be outside of the [path]``root`` directory provided by the template.
+  This way you prevent the inclusion of unwanted files in the ``initrd``.
+. Edit the new configuration file with these details.
+  You can use any value you like as the auto-sign key:
++
+----
+# create the grain
+grains:
+    autosign_key: <AUTOSIGN_KEY>
+
+# send the grain as part of auth request
+autosign_grains:
+    - autosign_key
+----
+
+. Create a tarball of this directory:
++
+----
+tar -czf autosign-grains.tgz etc
+----
+
+. Edit the [path]``config.xml`` template file.
+  In the [literal]``<packages type="image">`` element, add:
++
+----
+<archive name="autosign.tgz" bootinclude="true"/>
+----
+
+. Save the file and rebuild the image.
+
+
+
+[[retail.deployterminals.auto.pxe]]
+== Configure Saltboot to Auto-Sign During PXE Boot
+
+
+
+.Procedure: Configuring Saltboot to Auto-Sign During PXE Boot
 . Configure the PXE formula to specify these kernel parameters during booting:
 +
 ----
@@ -72,6 +130,10 @@ SALT_AUTOSIGN_GRAINS=autosign_key:<AUTOSIGN_KEY>
 . PXE boot the Salt client.
   The formula creates the [path]``./etc/salt/minion.d/autosign-grains-onetime.conf`` configuration file and passes it to ``initrd``.
 
+
+
+[[retail.deployterminals.auto.server]]
+== Configure the Server to Auto-Accept
 
 When you have configured Saltboot using one of these methods, you need to configure the server to accept them.
 The server stores the autosign keys in a file within the [path]``/etc/salt/master.d/`` directory.
